--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -17,12 +17,13 @@
 }
 
 .banner_hotel {
-  background-image: url("../assets/images/banner_hotel.png");
+  /* background-image: url("../assets/images/banner_hotel.png") !important; */
   background-size: cover;
   width: 100%;
   height: 90vh;
   background-position: center;
   max-height: 900px;
+  min-height: 380px;
 }
 
 .banner_contact {
