--- a/src/style/imageSlider.css
+++ b/src/style/imageSlider.css
@@ -14,8 +14,11 @@ li img:hover {
   border-color: #007bff;
 }
 
-li {
-    flex: 1;
-    margin-inline: 0 !important;
-    height: fit-content;
+.custom-dots li {
+  padding-top: 100px;
+  transform: translateY(33%);
+  flex: 1;
+  margin-inline: 0 !important;
+  height: fit-content;
+  width: 100%;
 }
