--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  /* custom */
 }
 
 .active {
@@ -84,12 +86,18 @@
   font-family: 'Apercu Pro', sans-serif !important;
 }
 
-.center {
-  @apply flex items-center justify-center;
-}
+@layer components {
+  .center {
+    @apply flex items-center justify-center;
+  }
 
-.container_custom {
-  @apply max-w-[1200px] xl:px-0 px-5;
+  .container_custom {
+    @apply max-w-[1200px] xl:px-0 px-5;
+  }
+
+  .form_auth {
+    @apply flex items-center md:static absolute w-11/12 bg-background top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 md:translate-y-0 md:translate-x-0 rounded-3xl p-3;
+  }
 }
 
 @theme inline {
